🔒 SECURITY FIX: Complete environment configuration overhaul
✅ CRITICAL ISSUES RESOLVED:
- Added comprehensive environment validation for frontend & backend
- Fixed missing OpenAI configuration in backend/.env.example
- Implemented type-safe configuration with runtime validation
- Added fail-fast startup validation to prevent deployment issues

🏗️ NEW FILES:
- frontend/src/config/env.ts - Frontend environment validation
- backend/src/config/environment.ts - Backend environment validation
- docs/ENVIRONMENT_CONFIGURATION_FIX.md - Complete implementation guide

🔧 FEATURES:
- Runtime validation of all required environment variables
- Format validation for URLs and API keys (OpenAI, Supabase)
- Type-safe configuration exports with TypeScript support
- Clear error messages for missing/invalid variables
- Development logging helpers for debugging
- Production-ready with platform integration (Vercel/Railway)

🛡️ SECURITY IMPROVEMENTS:
- Fail-fast validation prevents apps starting with bad config
- OpenAI API key format validation (must start with 'sk-')
- Supabase URL format validation
- Port number range validation (1-65535)
- No sensitive data exposure (existing .gitignore protection confirmed)

This resolves the Medium-High severity environment configuration issues
identified in the MVP Readiness Assessment and makes the application
production-ready with robust configuration management.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,6 +28,12 @@ BROWSER_TIMEOUT=30000
 MAX_CONCURRENT_PARSERS=3
 PARSING_CACHE_TTL=3600
 
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key
+OPENAI_MODEL=gpt-4
+OPENAI_MAX_TOKENS=2000
+OPENAI_TEMPERATURE=0.7
+
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
